--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div class="chat">
         <img class="chat__icono" src="img/chat.png" alt="icono de chat">
     </div>
+    <!--Marquesina-->
+    <marquee class="marquesina" behavior="" direction="left">12 Cuotas sin interés con Visa y Cabal</marquee> 
     <header class="encabezado">
         <!--Navbar toggler-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -47,7 +49,6 @@
                 </div><!--Fin collapse navbar-collapse-->
             </div><!--Fin container-fluid-->
         </nav><!--Fin Navbar toggler-->
-        <!--Logo-->
     </header>
     <main>
         <!--Carrusel-->   
@@ -56,20 +57,16 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/fondo1.jpg" class="d-block w-100" alt="Foto fondo n1">
+                    <img src="img/carrusel1.jpg" class="d-block w-100" alt="Foto fondo n1">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/fondo2.jpg" class="d-block w-100" alt="Foto fondo n2">
+                    <img src="img/carrusel2.jpg" class="d-block w-100" alt="Foto fondo n2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/fondo3.jpg" class="d-block w-100" alt="Foto fondo n3">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/fondo4.jpg" class="d-block w-100" alt="Foto fondo n4">
+                    <img src="img/carrusel3.jpg" class="d-block w-100" alt="Foto fondo n3">
                 </div>
             </div>
         </div><!--Fin Carrusel-->  
@@ -79,40 +76,46 @@
                     <h1 class="titulo__principal"><strong>I LOVE MY STYLE</strong></h1>
                 </div>
                 <div class="col-xs-12 col-md-5">
-                    <img class="photo" src="img/3.jpg" alt="modelo 1">
+                    <img class="photo" src="img/5.png" alt="modelo 1">
                 </div>
                 <div class="col-xs-12 col-md-5">
-                    <img class="photo" src="img/3.1.jpg" alt="modelo 2">
+                    <img class="photo" src="img/5.1.png" alt="modelo 2">
                 </div>
-            </section><!--Fin primera sección-->
+            </section><!--Fin sección-->
         </div><!--Fin container-fluid-->   
-            <div class="tituloProductos">
-                <h2>NUESTROS PRODUCTOS</h2>
+        <div class="tituloProductos">
+            <h2>NUESTROS PRODUCTOS</h2>
+        </div><!--Fin titulo-->  
+        <section class="productos_img">
+            <div class="productos_contenido">
+                <div class="producto_imagen">
+                    <img src="img/corpiño_1.1.png" alt="imagen soutein">
+                </div>
+                <div class="producto_texto">
+                    <h3>souteins</h3>
+                </div>
+                <div class="producto_link">
+                    <a href="productos.html#corpiños" class="btn btn1">Ver más</a>
+                </div>
+                </div>
+            <div class="productos_contenido">
+                <div class="producto_imagen">
+                    <img src="img/bombacha_2.1.png" alt="imagen bombacha">
+                </div>
+                <div class="producto_texto">
+                    <h3>bombachas</h3>
+                </div>
+                <div class="producto_link">
+                    <a href="productos.html#bombachas" class="btn btn1">Ver más</a>
+                </div>
             </div>
-            <section class="productos_img">
-                <div class="productos_contenido">
-                    <div class="producto_imagen">
-                        <img src="img/corpiño_1.1.png" alt="imagen soutein">
-                    </div>
-                    <div class="producto_texto">
-                        <h3>souteins</h3>
-                    </div>
-                    <div class="producto_link">
-                        <a href="productos.html#corpiños" class="btn btn1">Ver más</a>
-                    </div>
-                </div>
-                <div class="productos_contenido">
-                    <div class="producto_imagen">
-                        <img src="img/bombacha_2.1.png" alt="imagen bombacha">
-                    </div>
-                    <div class="producto_texto">
-                        <h3>bombachas</h3>
-                    </div>
-                    <div class="producto_link">
-                        <a href="productos.html#bombachas" class="btn btn1">Ver más</a>
-                    </div>
-                </div>
-            </section>
+        </section><!--Fin sección-->
+            <div class="publicidad">
+                <img src="img/gift2.png" alt="imagen de descuento">
+            </div>
+            <div class="publicidad">
+                <img src="img/Mi publicación.jpg" alt="Instagram">
+            </div>
     </main>
     <footer class="pie">
         <div class="container footerNewsletter">
