--- a/index.html
+++ b/index.html
@@ -110,12 +110,16 @@
                 </div>
             </div>
         </section><!--Fin sección-->
-            <div class="publicidad">
+        <div class="container-fluid">
+            <div class="row publicidad">
                 <img src="img/gift2.png" alt="imagen de descuento">
             </div>
-            <div class="publicidad">
+        </div>
+        <div class="container-fluid">
+            <div class="row publicidad">
                 <img src="img/Mi publicación.jpg" alt="Instagram">
             </div>
+        </div>
     </main>
     <footer class="pie">
         <div class="container footerNewsletter">
