--- a/productos.html
+++ b/productos.html
@@ -8,10 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--favicon-->
         <link rel="shortcut icon" href="img/ico1.ico" type="image/x-icon">
-        <!--Fonts.google-->
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
         <!--Framework Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <!--Fonts.google-->
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
         <!--CSS-->
         <link rel="stylesheet" href="css/style.css">
         <title>Ropa interior</title>
@@ -19,7 +19,9 @@
 <body>
     <!--Chat Whatsapp-->
     <div class="chat">
-        <img class="chat__icono" src="img/chat.png" alt="icono de chat">
+        <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
+            <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
+        </a>
     </div>
     <header class="encabezado">
         <!--Navbar toggler-->
@@ -39,126 +41,170 @@
                             <li class="nav-item"><a class="nav-link" href="tabla.html">Tabla de talles</a></li>
                             <li class="nav-item"><a class="nav-link" href="preguntas.html">Preguntas frecuentes</a></li>
                             <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                        </ul><!--Fin Enlaces-->
-                    </div>
+                        </ul>
+                    </div><!--Fin Enlaces-->
                 </div><!--Fin collapse navbar-collapse-->
             </div><!--Fin container-fluid-->
         </nav><!--Fin Navbar toggler-->
-        <!--Logo-->
-    </header>
+      </header>
     <main>
         <div class="container">
             <section class="row">
-                <article class="col-sm-6 col-md-4 productoSoutein">
-                    <a name="corpiños"></a>
+                <a name="corpiños"></a>
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/corpiños/1.jpg" alt="foto corpiño n1" class="img-responsive img-thumbnail">
-                            <p>Soutein ultra soft</p>
-                            <p>$1200</p>
-                        </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <img src="img/corpiños/1.jpg" alt="foto corpiño n1" class="img-responsive img-thumbnail">
+                        <p>Soutein ultra soft</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/2.jpg" alt="foto corpiño n2" class="img-responsive img-thumbnail">
-                            <p>Soutein triángulo de puntilla</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Soutein triángulo</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/3.jpg" alt="foto corpiño n3" class="img-responsive img-thumbnail">
-                            <p>Soutein tasa soft brillante</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Soutein tasa soft</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/4.jpg" alt="foto corpiño n4" class="img-responsive img-thumbnail">
-                            <p>Top básico de microfibra</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Top de microfibra</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/5.jpg" alt="foto corpiño n5" class="img-responsive img-thumbnail">
-                            <p>Top de algodón con lycra estampado</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Top estampado</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/6.jpg" alt="foto corpiño n6" class="img-responsive img-thumbnail">
-                            <p>Soutein tasa soft con strass</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Tasa soft con strass</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/7.jpg" alt="foto corpiño n7" class="img-responsive img-thumbnail">
-                            <p>Top de microfibra colores</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-6 col-md-4 productoSoutein">
-                        <div class="text-center detalle_producto">
+                        <p>Top de microfibra</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-6 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/8.jpg" alt="foto corpiño n8" class="img-responsive img-thumbnail">
-                            <p>Strapless con puntilla</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
-                    <article class="col-sm-12 col-md-4 productoSoutein producto9"">
-                        <div class="text-center detalle_producto">
+                        <p>Strapless con puntilla</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
+                <article class="col-sm-12 col-md-4 producto">
+                    <div class="text-center detalle_producto">
                         <img src="img/corpiños/9.jpg" alt="foto corpiño n9" class="img-responsive img-thumbnail">
-                            <p>Soutein básico de algodón</p>
-                            <p>$1200</p>
-                            </div>
-                    </article>
+                        <p>Soutein básico algodón</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
+                </article>
             </section><!--Fin primer section-->    
             <section class="row">
-                <article class="col-sm- col-md-4 productoBombacha">
-                    <a name="bombachas"></a>
+                <a name="bombachas"></a>
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/1.jpg" alt="foto bombacha n1" class="img-responsive img-thumbnail">
+                       <img src="img/bombachas/1.jpg" alt="foto bombacha n1" class="img-responsive img-thumbnail">
                         <p>Bombacha con tiras</p>
-                        <p>$1200</p>
-                        </div>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-                <article class="col-sm- col-md-4 productoBombacha">
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/2.jpg" alt="foto bombacha n2" class="img-responsive img-thumbnail">
-                        <p>Culotte de puntilla</p>
-                        <p>$1200</p>
-                        </div>
+                        <img src="img/bombachas/2.jpg" alt="foto bombacha n2" class="img-responsive img-thumbnail">
+                        <p>Culotte con puntilla</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-                <article class="col-sm- col-md-4 productoBombacha">
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/3.jpg" alt="foto bombacha n3" class="img-responsive img-thumbnail">
-                        <p>Culotte de algodón con puntilla</p>
-                        <p>$1200</p>
-                        </div>
+                        <img src="img/bombachas/3.jpg" alt="foto bombacha n3" class="img-responsive img-thumbnail">
+                        <p>Culotte de algodón</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-                <article class="col-sm- col-md-4 productoBombacha">
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/4.jpg" alt="foto bombacha n4" class="img-responsive img-thumbnail">
-                        <p>Culotte básico con puntilla</p>
-                        <p>$1200</p>
-                        </div>
+                        <img src="img/bombachas/4.jpg" alt="foto bombacha n4" class="img-responsive img-thumbnail">
+                        <p>Culotte básico</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-                <article class="col-sm- col-md-4 productoBombacha">
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/5.jpg" alt="foto bombacha n5" class="img-responsive img-thumbnail">
-                        <p>Culotte de microfibra con puntilla</p>
-                        <p>$1200</p>
-                        </div>
+                        <img src="img/bombachas/5.jpg" alt="foto bombacha n5" class="img-responsive img-thumbnail">
+                        <p>Culotte de microfibra</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-                <article class="col-sm- col-md-4 productoBombacha">
+                <article class="col-sm-6 col-md-4 producto">
                     <div class="text-center detalle_producto">
-                    <img src="img/bombachas/6.jpg" alt="foto bombacha n6" class="img-responsive img-thumbnail">
-                        <p>Culotte básico sin costura</p>
-                        <p>$1200</p>
-                        </div>
+                        <img src="img/bombachas/6.jpg" alt="foto bombacha n6" class="img-responsive img-thumbnail">
+                        <p>Culotte sin costura</p>
+                        <p class="precio">$2000</p>
+                        <p class="precio_cuotas">12 cuotas sin interés</p>
+                        <p class="precio_descuento">$1400</p>
+                        <button class="btn_producto">Comprar</button>
+                    </div>
                 </article>
-            </section><!--Fin segundo section-->   
+            </section><!--Fin segunda section-->   
         </div><!--Fin container-->                   
 
     </main>
@@ -166,7 +212,7 @@
         <div class="container footerNewsletter">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Newsletter</h3>
+                    <h3><strong>Newsletter</strong></h3>
                     <p>Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
                 </div>
             </div>
@@ -178,9 +224,17 @@
                 </div>   
             </div> 
                 <!-- ICONOS -->
-                <p class="iconos__texto">Seguinos</p>
-                <a href="#"><img class="iconoFace" src="img/facebook.png" alt="icono de facebook"></a>
-                <a href="#"><img  class="iconoInst" src="img/Instagram.png" alt="icono de Instagram"></a>
+                <ul id="iconos">
+                    <li id="facebook">
+                        <a href="https://www.facebook.com/pg/unbardolenceria/" title="Facebook" target="_blank"></a>
+                    </li>
+                    <li id="instagram">
+                        <a href="https://www.instagram.com/accounts/login/" title="Instagram" target="_blank"></a>
+                    </li>
+                    <li id="github">
+                        <a href="https://verovipputo.github.io/mi-proyecto/" title="Gitbug" target="_blank"></a>
+                    </li>
+                </ul>
                 <!-- MENU -->
                 <ul class="pie__menu">
                     <li class="pie__item"><a class="pie__link" href="tabla.html">Tabla de talles</a></li>
