--- a/tabla.html
+++ b/tabla.html
@@ -19,7 +19,9 @@
 <body>
      <!--Chat Whatsapp-->
      <div class="chat">
-        <img class="chat__icono" src="img/chat.png" alt="icono de chat">
+        <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
+            <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
+        </a>
     </div>
     <header class="encabezado">
         <!--Navbar toggler-->
@@ -49,9 +51,9 @@
     </header>
     <body>
         <main class="tabla">
-        <h1><strong>Tablas de talles</strong></h1>
+        <h1>Tablas de talles</h1>
         <div class="detalle_busto">
-            <h2><strong>¿Cómo saber qué talle de Corpiño soy?</strong></h2>
+            <h2>¿Cómo saber qué talle de Corpiño soy?</h2>
             <p>Con una cinta métrica tomá la medida de tu contorno de busto, esta es la medida del contorno total de tu torso a la altura del pezón. También debés tomar la medida de tu contorno bajo busto, esta es la medida del contorno total de tu torso a la altura que va el elástico del bralette.</p>
             <div class="container">
                 <div class="row">
@@ -99,7 +101,7 @@
             </div><!--Fin container--> 
         </div><!--Fin detalle_busto--> 
         <div class="detalle_bombacha">
-            <h2><strong>¿Cómo saber qué talle de Vedetina, Less o Culotte soy?</strong></h2>
+            <h2>¿Cómo saber qué talle de Vedetina, Less o Culotte soy?</h2>
             <p>Con una cinta métrica tomá la medida de tu contorno de cadera, tenés que tomar está medida en donde sean más anchas. Podés visualizar cómo tomar las medidas en el dibujo que está bajo la tabla de talles.</p>
             <div class="container">
                 <div class="row">
@@ -144,7 +146,7 @@
         <div class="container footerNewsletter">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Newsletter</h3>
+                    <h3><strong>Newsletter</strong></h3>
                     <p>Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
                 </div>
             </div>
@@ -156,9 +158,17 @@
                 </div>   
             </div> 
                 <!-- ICONOS -->
-                <p class="iconos__texto">Seguinos</p>
-                <a href="#"><img class="iconoFace" src="img/facebook.png" alt="icono de facebook"></a>
-                <a href="#"><img  class="iconoInst" src="img/Instagram.png" alt="icono de Instagram"></a>
+                <ul id="iconos">
+                    <li id="facebook">
+                        <a href="https://www.facebook.com/pg/unbardolenceria/" title="Facebook" target="_blank"></a>
+                    </li>
+                    <li id="instagram">
+                        <a href="https://www.instagram.com/accounts/login/" title="Instagram" target="_blank"></a>
+                    </li>
+                    <li id="github">
+                        <a href="https://verovipputo.github.io/mi-proyecto/" title="Gitbug" target="_blank"></a>
+                    </li>
+                </ul>
                 <!-- MENU -->
                 <ul class="pie__menu">
                     <li class="pie__item"><a class="pie__link" href="tabla.html">Tabla de talles</a></li>
@@ -170,7 +180,7 @@
             </div><!--Fin designed-->
         </div><!--Fin container-->
     </footer><!--Fin Footer-->
-            <!--JS Bootstrap-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+        <!--JS Bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     </body>
 </html>
