--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--favicon-->
     <link rel="shortcut icon" href="img/ico1.ico" type="image/x-icon">
-    <!--Fonts.google-->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
     <!--Librería michalsnik.github.io-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Framework Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!--animate.style-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--Fonts.google-->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <title>Ropa interior</title>
@@ -21,10 +23,12 @@
 <body>
     <!--Chat Whatsapp-->
     <div class="chat">
-        <img class="chat__icono" src="img/chat.png" alt="icono de chat">
+        <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
+            <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
+        </a>
     </div>
     <!--Marquesina-->
-    <marquee class="marquesina" behavior="" direction="left">12 Cuotas sin interés con Visa y Cabal</marquee> 
+    <marquee class="marquesina" behavior="" direction="left">12 Cuotas sin interés con Visa y Master</marquee> 
     <header class="encabezado">
         <!--Navbar toggler-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -32,9 +36,8 @@
                 <!--Menú Hambuerguesa-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon ico-Hamb"></span>
                 </button>
-                
-                <!--Logo-->
-                <a class="navbar-brand" href="index.html"><img src="img/Logo.png" alt="logo" width="150" height="auto" class="d-inline-block align-text-top"></a><!--Fin Logo-->
+                 <!--Logo-->
+                <a class="navbar-brand" href="index.html"><img src="img/Logo.png" alt="logo" width="150" height="auto" class="d-inline-block align-text-top animate__animated animate__flipInX"></a><!--Fin Logo-->
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <!--Enlaces-->
                     <div>
@@ -44,8 +47,8 @@
                             <li class="nav-item"><a class="nav-link" href="tabla.html">Tabla de talles</a></li>
                             <li class="nav-item"><a class="nav-link" href="preguntas.html">Preguntas frecuentes</a></li>
                             <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                        </ul><!--Fin Enlaces-->
-                    </div>
+                        </ul>
+                    </div><!--Fin Enlaces-->
                 </div><!--Fin collapse navbar-collapse-->
             </div><!--Fin container-fluid-->
         </nav><!--Fin Navbar toggler-->
@@ -125,8 +128,8 @@
         <div class="container footerNewsletter">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Newsletter</h3>
-                    <p>Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
+                    <h3><strong>Newsletter</strong></h3>
+                    <p class="parrafo_footer">Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
                 </div>
             </div>
             <div class="row footerNewsletter__form">
@@ -137,9 +140,17 @@
                 </div>   
             </div> 
                 <!-- ICONOS -->
-                <p class="iconos__texto">Seguinos</p>
-                <a href="#"><img class="iconoFace" src="img/facebook.png" alt="icono de facebook"></a>
-                <a href="#"><img  class="iconoInst" src="img/Instagram.png" alt="icono de Instagram"></a>
+                <ul id="iconos">
+                    <li id="facebook">
+                        <a href="https://www.facebook.com/pg/unbardolenceria/" title="Facebook" target="_blank"></a>
+                    </li>
+                    <li id="instagram">
+                        <a href="https://www.instagram.com/accounts/login/" title="Instagram" target="_blank"></a>
+                    </li>
+                    <li id="github">
+                        <a href="https://verovipputo.github.io/mi-proyecto/" title="Gitbug" target="_blank"></a>
+                    </li>
+                </ul>
                 <!-- MENU -->
                 <ul class="pie__menu">
                     <li class="pie__item"><a class="pie__link" href="tabla.html">Tabla de talles</a></li>
