--- a/contacto.html
+++ b/contacto.html
@@ -49,58 +49,51 @@
         </nav><!--Fin Navbar toggler-->
         <!--Logo-->
     </header>
-    <main class="contacto">
-        <div class="container">
-            <form action="mail.php" method="get" class="row">
-                <div class="col-md-12">
-                    <label for="Motivo">Motivo</label>
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>Elejir motivo de la consulta</option>
-                        <option value="Stock">Consulta de Stock</option>
-                        <option value="Reclamo">Reclamo de calidad</option>
-                        <option value="Cambios">Cambios o devoluciones</option>
-                        <option value="Envío">Envío de pedido</option>
-                        <option value="Otros">Otra información</option>
-                    </select><br>
-                </div>  
+        <main class="container contacto_main">
+            <section class="row">
                 <div class="col-md-6">
-                    <label for="exampleFormControlInput1" class="form-label">Nombre Completo</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido" name="nombre" required><br>
+                    <form action="codigo.php" method="post">
+                        <h1 class="contacto_titulo">Contactanos</h1>
+                        <div class="grupo">
+                            <input type="text" name="" id="" required><span class="barra"></span>
+                            <label>Nombre</label>
+                        </div>
+                        <div class="grupo">
+                            <input type="email" name="" id="" required><span class="barra"></span>
+                            <label>Email</label>
+                        </div>
+                        <div class="grupo">
+                            <input type="telefono" name="" id="" required><span class="barra"></span>
+                            <label>Teléfono</label>
+                        </div>
+                        <div class="grupo">
+                            <textarea name="" id="" rows="2" required></textarea><span class="barra"></span>
+                            <label>Comentarios</label>
+                        </div>
+                        <button class="contacto_boton" type="submit">Contactar</button>
+                    </form>
                 </div>
-                <div class="col-md-6">
-                    <label for="exampleFormControlInput1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="info@dominio.com" name="email" required><br>
+                <div class="col-md-6" >
+                    <img src="img/contacto1.jpg" alt="" class="contacto_imagen">
                 </div>
-                <div class="col-md-12">
-                    <label for="comentarios" class="form-label">Comentarios</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="comentarios" required></textarea><br>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                    <label class="form-check-label" for="flexCheckChecked">¿Desea recibir nuestro Newsletter?</label>
-                </div>
-                <div class="col-md-12">
-                    <button type="button" class="btn btn-outline-dark btn-lg">Enviar</button>
-                </div>
-            </form>
-        </div>    
+            </section>
     </main>
     <footer class="pie">
         <div class="container footerNewsletter">
             <div class="row">
                 <div class="col-md-12">
                     <h3><strong>Newsletter</strong></h3>
-                    <p>Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
+                    <p class="parrafo_footer">Recibí en tu email, todas nuestras novedades, promociones y ofertas especiales</p>
                 </div>
             </div>
             <div class="row footerNewsletter__form">
                 <div class="col-md-12 mail">
-                    <form action="codigo.php" method="post" class="form_pie">
+                    <form action="codigo.php" method="post">
                         <input type="email" class="form-control" placeholder="info@dominio.com" required><input type="submit" value="Subscribirme">
                     </form>  
                 </div>   
             </div> 
-                <!-- ICONOS -->
+            <!-- ICONOS -->
                 <ul id="iconos">
                     <li id="facebook">
                         <a href="https://www.facebook.com/pg/unbardolenceria/" title="Facebook" target="_blank"></a>
