--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                     <img src="img/carrusel3.jpg" class="d-block w-100" alt="Foto fondo n3">
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
         </div><!--Fin Carrusel-->  
         <div class="container-fluid">
             <section class="row seccion">
