--- a/tabla.html
+++ b/tabla.html
@@ -102,7 +102,7 @@
         </div><!--Fin detalle_busto--> 
         <div class="detalle_bombacha">
             <h2>¿Cómo saber qué talle de Vedetina, Less o Culotte soy?</h2>
-            <p>Con una cinta métrica tomá la medida de tu contorno de cadera, tenés que tomar está medida en donde sean más anchas. Podés visualizar cómo tomar las medidas en el dibujo que está bajo la tabla de talles.</p>
+            <p>Con una cinta métrica tomá la medida de tu contorno de cadera, tenés que tomar está medida en donde sean más anchas. Podés visualizar cómo tomar las medidas en el dibujo que está junto a la tabla de talles.</p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
